--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
               </p>
               <p id="successMsg" class="text-success d-none">Success</p>
               <p id="existMsg" class="text-warning d-none">
-                That was an invalid email or password. Try again!
+                That was an invalid email Please SignUP!
+              </p>
+              <p id="passErrorMsg" class="text-warning d-none">
+                That was Wrong Password!
               </p>
               <button id="btnSignin" class="btn mt-3">Sign In</button>
               <p class="lead">
