--- a/register.html
+++ b/register.html
@@ -64,10 +64,11 @@
               <div class="form-floating mb-3">
                 <input
                   type="password"
-                  class="form-control"
+                  class="form-control position-relative"
                   id="pass"
                   placeholder="name@example.com"
                 />
+                <i id="eye" class="fa-regular fa-eye position-absolute "></i>
                 <label for="pass">Enter Your Password</label>
                 <p
                   id="passMsg"
